// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#strands-agent#mcp-connection generator > Cognito auth > should match snapshot for Cognito auth client > agentcore-identity-token-provider.ts 1`] = `
"import {
  BedrockAgentCoreClient,
  GetResourceOauth2TokenCommand,
} from '@aws-sdk/client-bedrock-agentcore';

export interface AgentCoreIdentityTokenProviderOptions {
  providerName: string;
  scope: string;
  workloadAccessToken: string;
}

/**
 * Token provider that uses AgentCore Identity to obtain OAuth2 access tokens
 * via the M2M (client_credentials) flow.
 *
 * AgentCore Identity handles:
 * - Token caching in the managed Token Vault
 * - The client_credentials grant against Cognito
 */
export class AgentCoreIdentityTokenProvider {
  private readonly client = new BedrockAgentCoreClient({});
  private readonly providerName: string;
  private readonly scope: string;
  private readonly workloadAccessToken: string;

  constructor(options: AgentCoreIdentityTokenProviderOptions) {
    this.providerName = options.providerName;
    this.scope = options.scope;
    this.workloadAccessToken = options.workloadAccessToken;
  }

  async getToken(): Promise<string> {
    const response = await this.client.send(
      new GetResourceOauth2TokenCommand({
        workloadIdentityToken: this.workloadAccessToken,
        resourceCredentialProviderName: this.providerName,
        scopes: [this.scope],
        oauth2Flow: 'M2M',
      }),
    );

    if (!response.accessToken) {
      throw new Error(
        \`Failed to obtain M2M token from AgentCore Identity. Session status: \${response.sessionStatus}\`,
      );
    }

    return response.accessToken;
  }
}
"
`;

exports[`ts#strands-agent#mcp-connection generator > Cognito auth > should match snapshot for Cognito auth client > inventory-mcp-client-cognito.ts 1`] = `
"import { McpClient } from '@strands-agents/sdk';
import { AgentCoreMcpClient } from '../core/agentcore-mcp-client.js';
import { AgentCoreIdentityTokenProvider } from '../core/agentcore-identity-token-provider.js';
import { StreamableHTTPClientTransport } from '@modelcontextprotocol/sdk/client/streamableHttp.js';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';

export interface InventoryMcpClientContext {
  sessionId: string;
  workloadAccessToken?: string;
}

/**
 * Client for connecting to the InventoryMcp MCP server.
 *
 * In deployed mode: resolves the AgentCore runtime ARN from runtime config
 * and uses JWT-authenticated AgentCore transport via AgentCore Identity.
 *
 * In local mode (SERVE_LOCAL env var set): connects directly
 * to the local MCP server via Streamable HTTP.
 */
export class InventoryMcpClient {
  static async create(ctx: InventoryMcpClientContext): Promise<McpClient> {
    if (process.env.SERVE_LOCAL === 'true') {
      // Local development: connect directly via Streamable HTTP
      const transport = new StreamableHTTPClientTransport(
        new URL('http://localhost:8082/mcp'),
      );
      return new McpClient({ transport });
    }

    // Deployed: resolve ARN and credentials from runtime config
    const config = (await getAppConfig('connection', {
      application: process.env.RUNTIME_CONFIG_APP_ID!,
      environment: 'default',
      transform: 'json',
    })) as Record<string, any>;

    const m2mConfig = config.cognitoM2M?.['InventoryMcp'];
    const tokenProvider = new AgentCoreIdentityTokenProvider({
      providerName: m2mConfig.credentialProviderName,
      scope: m2mConfig.scope,
      workloadAccessToken: ctx.workloadAccessToken!,
    });

    return AgentCoreMcpClient.withJwtAuth({
      agentRuntimeArn: config.agentRuntimes.InventoryMcp,
      accessTokenProvider: () => tokenProvider.getToken(),
      sessionId: ctx.sessionId,
    });
  }
}
"
`;

exports[`ts#strands-agent#mcp-connection generator > Cognito auth > should match snapshot for Cognito auth client > transformed-agent-cognito.ts 1`] = `
"import { InventoryMcpClient } from ':proj/agent-connection';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';
import type { Context } from './init.js';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async (ctx: Context) => {
  const inventoryMcp = await InventoryMcpClient.create(ctx);
  return new Agent({
    systemPrompt: 'You are a mathematical wizard.',
    tools: [inventoryMcp, multiply],
  });
};
"
`;

exports[`ts#strands-agent#mcp-connection generator > should match snapshot for agent-connection src files > agent-connection-index.ts 1`] = `
"export * from './app/inventory-mcp-client.js';
// Export your library code here
"
`;

exports[`ts#strands-agent#mcp-connection generator > should match snapshot for agent-connection src files > agentcore-mcp-client.ts 1`] = `
"import { randomUUID } from 'node:crypto';
import { McpClient } from '@strands-agents/sdk';
import { StreamableHTTPClientTransport } from '@modelcontextprotocol/sdk/client/streamableHttp.js';
import { AwsClient } from 'aws4fetch';
import { fromNodeProviderChain } from '@aws-sdk/credential-providers';

/**
 * Common options for creating an AgentCore MCP client
 */
export interface AgentCoreMcpClientOptions {
  /**
   * The ARN of the Bedrock AgentCore Runtime to connect to
   */
  agentRuntimeArn: string;
  /**
   * Session ID to include in request headers.
   * Defaults to a random UUID if not provided.
   */
  sessionId?: string;
}

/**
 * Options for creating an AgentCore MCP client with IAM authentication
 */
export interface AgentCoreMcpClientIamOptions extends AgentCoreMcpClientOptions {
  /**
   * Optional AWS credential provider. If not provided, uses the default
   * credential provider chain from the AWS SDK.
   */
  credentialProvider?: ReturnType<typeof fromNodeProviderChain>;
}

/**
 * Options for creating an AgentCore MCP client with JWT authentication
 */
export interface AgentCoreMcpClientJwtOptions extends AgentCoreMcpClientOptions {
  /**
   * A function which returns the JWT access token used to authenticate
   */
  accessTokenProvider: () => Promise<string>;
}

/**
 * Internal options for creating an AgentCore MCP client
 */
interface CreateOptions {
  url: string;
  sessionId?: string;
  buildHeaders?: () => Promise<Record<string, string>>;
  fetch?: typeof fetch;
}

/**
 * Factory for clients to call MCP servers hosted on Bedrock AgentCore Runtime
 */
export class AgentCoreMcpClient {
  /**
   * Construct the invocation URL for an AgentCore runtime ARN and extract the region.
   * ARN format: arn:partition:service:region:account-id:resource
   */
  private static buildUrl(agentRuntimeArn: string): {
    region: string;
    url: string;
  } {
    const region = agentRuntimeArn.split(':')[3];
    const url = \`https://bedrock-agentcore.\${region}.amazonaws.com/runtimes/\${encodeURIComponent(agentRuntimeArn)}/invocations?qualifier=DEFAULT\`;
    return { region, url };
  }

  /**
   * Internal method to create an MCP client
   */
  private static create(options: CreateOptions): McpClient {
    const {
      url,
      sessionId = randomUUID(),
      buildHeaders = async () => ({}),
      fetch: customFetch,
    } = options;

    // Create a custom fetch that adds required headers
    const fetchWithHeaders: typeof fetch = async (input, init) => {
      const headers = {
        'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id': sessionId,
        ...(await buildHeaders()),
      };
      const existingHeaders = init?.headers;

      const mergedInit = {
        ...init,
        headers: !existingHeaders
          ? headers
          : existingHeaders instanceof Headers
            ? (() => {
                const h = new Headers(existingHeaders);
                Object.entries(headers).forEach(([k, v]) => h.append(k, v));
                return h;
              })()
            : Array.isArray(existingHeaders)
              ? [...existingHeaders, ...Object.entries(headers)]
              : { ...existingHeaders, ...headers },
      };
      return (customFetch || fetch)(input, mergedInit);
    };

    // Create the transport
    const transport = new StreamableHTTPClientTransport(new URL(url), {
      fetch: fetchWithHeaders,
    });

    // Create and return the MCP client
    return new McpClient({ transport });
  }

  /**
   * Create an MCP client with IAM (SigV4) authentication
   */
  static withIamAuth(options: AgentCoreMcpClientIamOptions): McpClient {
    const { agentRuntimeArn, sessionId } = options;
    const credentialProvider =
      options.credentialProvider ?? fromNodeProviderChain();
    const { region, url } = AgentCoreMcpClient.buildUrl(agentRuntimeArn);

    // Create a SigV4 signing fetch function
    const sigv4Fetch: typeof fetch = async (...args) => {
      const credentials = await credentialProvider();
      const client = new AwsClient({
        ...credentials,
        service: 'bedrock-agentcore',
        region,
      });
      return client.fetch(...args);
    };

    return AgentCoreMcpClient.create({
      url,
      sessionId,
      fetch: sigv4Fetch,
    });
  }

  /**
   * Create an MCP client with JWT authentication
   */
  static withJwtAuth(options: AgentCoreMcpClientJwtOptions): McpClient {
    const { agentRuntimeArn, accessTokenProvider, sessionId } = options;
    const { url } = AgentCoreMcpClient.buildUrl(agentRuntimeArn);

    return AgentCoreMcpClient.create({
      url,
      sessionId,
      buildHeaders: async () => ({
        Authorization: \`Bearer \${await accessTokenProvider()}\`,
      }),
    });
  }
}
"
`;

exports[`ts#strands-agent#mcp-connection generator > should match snapshot for agent-connection src files > inventory-mcp-client.ts 1`] = `
"import { McpClient } from '@strands-agents/sdk';
import { AgentCoreMcpClient } from '../core/agentcore-mcp-client.js';
import { StreamableHTTPClientTransport } from '@modelcontextprotocol/sdk/client/streamableHttp.js';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';

export interface InventoryMcpClientContext {
  sessionId: string;
}

/**
 * Client for connecting to the InventoryMcp MCP server.
 *
 * In deployed mode: resolves the AgentCore runtime ARN from runtime config
 * and uses SigV4-authenticated AgentCore transport.
 *
 * In local mode (SERVE_LOCAL env var set): connects directly
 * to the local MCP server via Streamable HTTP.
 */
export class InventoryMcpClient {
  static async create(ctx: InventoryMcpClientContext): Promise<McpClient> {
    if (process.env.SERVE_LOCAL === 'true') {
      // Local development: connect directly via Streamable HTTP
      const transport = new StreamableHTTPClientTransport(
        new URL('http://localhost:8082/mcp'),
      );
      return new McpClient({ transport });
    }

    // Deployed: resolve ARN from runtime config, use AgentCore transport
    const config = (await getAppConfig('connection', {
      application: process.env.RUNTIME_CONFIG_APP_ID!,
      environment: 'default',
      transform: 'json',
    })) as Record<string, any>;

    return AgentCoreMcpClient.withIamAuth({
      agentRuntimeArn: config.agentRuntimes.InventoryMcp,
      sessionId: ctx.sessionId,
    });
  }
}
"
`;

exports[`ts#strands-agent#mcp-connection generator > should match snapshot for agent-connection src files > transformed-agent.ts 1`] = `
"import { InventoryMcpClient } from ':proj/agent-connection';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';
import type { Context } from './init.js';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async (ctx: Context) => {
  const inventoryMcp = await InventoryMcpClient.create(ctx);
  return new Agent({
    systemPrompt: 'You are a mathematical wizard.',
    tools: [inventoryMcp, multiply],
  });
};
"
`;
